src/styles/media-screen-small.css
/* SCREEN - SMALL */

@media only screen and (max-width: 600px) {

  header h1 {
    font-size: 35px;
  }

  header .avatar {
    width: 100px;
    height: auto;
  }

  ul.listing.connect li,
  .page-home .tag-list li {
    width: 100%;
    margin: 30px 0 0;
  }

  ul.page-gallery {
    gap: 0;
  }

  ul.page-gallery li {
    width: 100%;
  }

}

@media only screen and (max-width: 400px) {

  header h1 {
    font-size: 30px;
  }

}

